--- a/MySQLDatabase/App.config
+++ b/MySQLDatabase/App.config
@@ -5,16 +5,16 @@
 	<log4net>
 		<root>
 			<level value="DEBUG" />
-			<appender-ref ref="ConsoleAppender" />
+			<!--<appender-ref ref="ConsoleAppender" />-->
 			<appender-ref ref="FileAppender" />
 		</root>
 
 		<!-- コンソールへのログ設定 -->
-		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+		<!--<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
 			</layout>
-		</appender>
+		</appender>-->
 
 		<!-- ファイルへの出力の設定例 -->
 		<appender name="FileAppender" type="log4net.Appender.FileAppender">
